<resources>
    <string name="app_name">MultiTracker</string>
    <string name="test_button_text">Тестирование</string>
    <string name="statistics_button_text">Статистика</string>
    <string name="accuracy">Точность</string>
    <string name="reaction_time">Время реакции</string>
    <string name="update">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="best">Лучшее:</string>
    <string name="worst">Худшее:</string>
    <string name="mean">Среднее:</string>
    <string name="statistics_hint">Выберите учетную запись слева</string>
    <string name="age_info">Возраст: %1$d</string>
    <string name="full_name_info">%1$s %2$s %3$s</string>
    <string name="male">Пол: Мужской</string>
    <string name="female">Пол: Женский</string>
    <string name="hint_no_tests">Ещё нет пройденных тестирований</string>
    <string name="diagnosis_info">Диагноз: %1$s</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="age">Возраст</string>
    <string name="male_radiobutton_text">Мужской</string>
    <string name="female_radiobutton_text">Женский</string>
    <string name="sex">Пол</string>
    <string name="diagnosis">Диагноз</string>
    <string name="empty_name_error">Имя обязательно должно быть заполнено</string>
    <string name="empty_surname_error">Фамилия обязательно должна быть заполнена</string>
    <string name="age_error">Возраст должн быть целым числом от 0 до 100</string>
    <string name="save">Сохранить</string>
    <string name="total_number">Общее число объектов:</string>
    <string name="target_number">Количество целей:</string>
    <string name="speed">Скорость:</string>
    <string name="movement_time">Время движения:</string>
    <string name="ready">Готово</string>
    <string name="help">Помощь</string>
    <string name="add">Добавить</string>
    <string name="number">%1$d</string>
    <string name="time">%1$d сек.</string>
    <string name="second">сек.</string>
    <string name="object">Объект</string>
    <string name="go">Поехали!</string>
    <string name="one">1</string>
    <string name="five_second">5 сек.</string>
    <string name="home_screen">Главный</string>
    <string name="to_home_screen">На главный экран</string>
    <string name="all_statistics">Вся статистика</string>
    <string name="percent">%1$d%%</string>
    <string name="no_users">Учетных записей пока нет</string>
    <string name="delete_alert_message">Удалить учетную запись?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="training_test">Обучающее тестирование</string>
    <string name="instruction">
        Тестирование состоит из нескольких попыток, каждое из
        них проходит по следующей схеме:\n\nНа экране отобразятся
        объекты двух цветов: жёлтые – обычные и зеленые – цели.\nПостарайтесь
        запомнить расположение объектов-целей, когда будете готовы, нажмите кнопку
        «Поехали» в правом нижнем углу экрана.\nВсе объекты станут жёлтыми и придут в движение,
        старайтесь проследить за объектами-целями.\nПосле остановки объектов,
        нажмите на те из них, которые по-вашему являются целевыми.\nПри этом,
        правильные ответы будут отображаться зеленым, а неправильные красным.\nПосле того,
        как вы отметите то количество объектов, которое было количеством целевых объектов изначально, попытка завершится.\nПосле завершения всех попыток, тестирование заканчивается. Вы попадаете на экран отчета.\n\nВы можете пройти обучающее тестирование, его результаты не будут сохранены.
    </string>
    <string name="instruction_title">Инструкция</string>
    <string name="hint_not_enough_tests">Пройденных тестирований недостаточно для отображения графика</string>
    <string name="download">Скачать</string>
</resources>